@@ -1,3 +1,5 @@
+	* support more fine-grained torrent states between which peer sources it
+	  announces to
 	* supports calculating sha1 file-hashes when creating torrents
 	* made the send_buffer_watermark performance warning more meaningful
 	* supports complete_ago extension
